[project]
name = "gae-test-uv"
version = "0.0.1"
description = "Test out of UV on GAE infrastructure"
authors = [{ name = "Stef Piatek" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.9,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "azure-identity==1.12.0",
    "azure-keyvault==4.2.0",
    "token-bucket==0.3.0",
    "python-decouple==3.6",
    "python-slugify==8.0.1",
    "pika==1.3.1",
    "aio_pika==8.2.4",
    "environs==9.5.0",
    "requests==2.31.0",
    "jsonpickle==3.0.2",
    "sqlalchemy==2.0.24",
    "PyYAML==6.0.1",
]

[project.urls]
Homepage = "https://stefpiatek.github.io/gae-test-uv/"
Repository = "https://github.com/stefpiatek/gae-test-uv"
Documentation = "https://stefpiatek.github.io/gae-test-uv/"

[tool.uv]
dev-dependencies = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",

    "mypy>=1.13",

    "ruff>=0.7.4",

]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["gae_test_uv"]

[tool.mypy]
files = ["gae_test_uv"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true
